objects/Sales_Rate_Plan_Description__c/Sales_Rate_Plan_Description__c.object-meta.xml
<CustomObject>
    <label>Sales Rate Plan Description</label>
    <nameField>
        <label>Sales Rate Plan Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Rate Plan Descriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>