objects/Sales_Rate_Plan_Description__c/fields/Conversion_Type__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Type__c</fullName>
    <label>Conversion Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Access</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>