objects/Sales_Rate_Plan_Description__c/fields/Feature_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Feature_Grouping__c</fullName>
    <label>Feature Grouping</label>
    <referenceTo>Feature_Grouping__c</referenceTo>
    <relationshipLabel>Sales Rate Plan Descriptions</relationshipLabel>
    <relationshipName>Sales_Rate_Plan_Descriptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>