objects/Sales_Rate_Plan_Description__c/fields/NoMRRFlag__c.field-meta.xml
<CustomField>
    <fullName>NoMRRFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NoMRRFlag</label>
    <type>Checkbox</type>
</CustomField>