objects/Sales_Rate_Plan_Description__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SalesRatePlanDescExternalID__c</columns>
    <columns>NAME</columns>
    <columns>Feature_Grouping__c</columns>
    <columns>SortKey__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Expiration__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>